change in desktop margin

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ span{
         min-width: 560px;
         display: grid;
         grid-template-rows: auto auto; 
-        margin-top:1rem;
+        margin:1rem;
     }
     .max-screen{
         display: grid;
